# notification-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_notifications.py
app/: main.py
app/core/: config.py  database.py  migrations.py
app/models/: notification.py
app/routers/: notifications.py
app/schemas/: notification.py
app/services/: __init__.py  notification_service.py  sender.py
app/storage/: __init__.py  notification_repository.py  notification_storage.py
tests/: test_notifications.py
